Filtro por pais agregado

--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
         <button id="orderBy-City" type="button" class="btn btn-outline-info ms-3">Ciudad</button>
     </div>
 
+    <div id="filterBy" class="d-flex mt-4">
+        <p class="ms-4 btn-filterBy">Filtrar por: </p>
+        <button class="btn btn-outline-info dropdown-toggle ms-4" type="button" id="menuPaises" data-bs-toggle="dropdown" aria-expanded="false">
+            Pais
+        </button>
+        <div id="dropPaises" class="dropdown-menu" aria-labelledby="menuPaises">
+
+        </div>
+    </div>
+
     <section id="grid-destinos" class="d-flex flex-wrap justify-content-center pt-5"></section>
  
     <div class="modal fade" id="modalCarrito" tabindex="-1" aria-labelledby="modalCarritoTitle" aria-hidden="true">
