--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
 
     <div id="orderBy" class="d-flex mt-4">
         <p class="ms-4 btn-orderBy">Ordenar por: </p>
-        <button class="btn btn-outline-info dropdown-toggle ms-4" type="button" id="menuPrecio" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="btn btn-outline-info dropdown-toggle btn-sm ms-2 ms-md-3" type="button" id="menuPrecio" data-bs-toggle="dropdown" aria-expanded="false">
             Precio
         </button>
         <div class="dropdown-menu" aria-labelledby="menuPrecio">
             <button id="orderBy-PriceAsc" class="dropdown-item" type="button">Menor Precio</button>
             <button id="orderBy-PriceDesc" class="dropdown-item" type="button">Mayor Precio</button>
         </div>
-        <button id="orderBy-Country" type="button" class="btn btn-outline-info ms-3">Pais</button>
-        <button id="orderBy-City" type="button" class="btn btn-outline-info ms-3">Ciudad</button>
+        <button id="orderBy-Country" type="button" class="btn btn-outline-info btn-sm ms-1 ms-md-2">Pais</button>
+        <button id="orderBy-City" type="button" class="btn btn-outline-info btn-sm ms-1 ms-md-2">Ciudad</button>
     </div>
 
     <div id="filterBy" class="d-flex mt-4">
         <p class="ms-4 btn-filterBy">Filtrar por: </p>
-        <button class="btn btn-outline-info dropdown-toggle ms-4" type="button" id="menuPaises" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="btn btn-outline-info dropdown-toggle btn-sm ms-2 ms-md-3" type="button" id="menuPaises" data-bs-toggle="dropdown" aria-expanded="false">
             Pais
         </button>
         <div id="dropPaises" class="dropdown-menu" aria-labelledby="menuPaises">
